[package]
name = "rain_viewer"
version = "0.1.0"
edition = "2018"
authors = ["Troy Neubauer <troyneubauer@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/rain_viewer"
repository = "https://github.com/TroyNeubauer/rain-viewer"
description = "Rust wrapper to the RainViewer API"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.12", features = ["full"] }
reqwest = "0.11"

thiserror = "1.0"
