[package]
name = "rain_viewer"
version = "0.3.1"
edition = "2021"
authors = ["Troy Neubauer <troyneubauer@gmail.com>", "Luke Newcomb <newcomb.luke@protonmail.com>"]
license = "MIT"
documentation = "https://docs.rs/rain_viewer"
repository = "https://github.com/TroyNeubauer/rain-viewer"
description = "Rust wrapper to the RainViewer API"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

reqwest = "0.11"
thiserror = "1.0"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1.12", features = ["full"] }


